# application/storage/api-docs/api-docs.json
@@ -1,12 +1,12 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "API Documentation",
-        "description": "Description removed for better illustration of structure.",
+        "title": "Documentação API Dewtech",
+        "description": "API de cadastramento de usuários e Autênticação",
         "contact": {
-            "name": "company",
-            "url": "https://example.test",
-            "email": "admin@example.test"
+            "name": "Dewtech",
+            "url": "https://www.dewtech.io",
+            "email": "wanderson@dewtech.io"
         },
         "license": {
             "name": "Apache 2.0",
@@ -15,20 +15,23 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/users": {
+        "/v1/dewtech/users": {
             "get": {
-                "summary": "Get list of users",
-                "description": "Returns a list of all users.",
-                "operationId": "d83e53ee397e9359c783cc127c690dcb",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Lista usuários",
+                "description": "Retorna uma lista de usuários.",
+                "operationId": "f01a417fd54b0b89dc27533a6d24f9b2",
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
+                        "description": "Operação realizada com sucesso",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/components/schemas/User"
+                                        "$ref": "#/components/schemas/UserRequestsDto"
                                     }
                                 }
                             }
@@ -37,9 +40,12 @@
                 }
             },
             "post": {
-                "summary": "Create a new user",
-                "description": "Create a new user with the provided data.",
-                "operationId": "f903fe759b9720fc656093942a05d88c",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Cadastra usuário",
+                "description": "Cadastramento de usuário.",
+                "operationId": "2422bb06ef64c371379484c4f4617480",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -65,7 +71,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "User created successfully",
+                        "description": "Usuário criado com sucesso",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -85,17 +91,27 @@
                             }
                         }
                     },
-                    "422": {
-                        "description": "Validation error"
+                    "500": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
                     }
                 }
             }
         },
-        "/users/{id}": {
+        "/v1/dewtech/users/{id}": {
             "get": {
-                "summary": "Get user by ID",
-                "description": "Get user information by user ID.",
-                "operationId": "e99e13e65ae078072133c1076102e10b",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Busca usuário pelo ID",
+                "description": "Busca informações do usuário pelo Id.",
+                "operationId": "3fd2b75aee594c8be7f897cb8fd501fb",
                 "parameters": [
                     {
                         "name": "id",
@@ -110,7 +126,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
+                        "description": "Operação realizado com sucesso",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -131,14 +147,17 @@
                         }
                     },
                     "404": {
-                        "description": "User not found"
+                        "description": "Usuário não encontrado"
                     }
                 }
             },
             "put": {
-                "summary": "Update user",
-                "description": "Update user information.",
-                "operationId": "601acd807897747c8f1d0073b94b8ab0",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Atualização de usuário",
+                "description": "Atualização de usuário com sucesso.",
+                "operationId": "ffa181e2dc0be63d6d00b09e0cdd1ba3",
                 "parameters": [
                     {
                         "name": "id",
@@ -176,7 +195,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "User updated successfully",
+                        "description": "Usuário atualizado com sucesso",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -189,6 +208,12 @@
                                         },
                                         "email": {
                                             "type": "string"
+                                        },
+                                        "password": {
+                                            "type": "string"
+                                        },
+                                        "remember_token": {
+                                            "type": "string"
                                         }
                                     },
                                     "type": "object"
@@ -197,14 +222,27 @@
                         }
                     },
                     "404": {
-                        "description": "User not found"
+                        "description": "Usuário não encontrado"
+                    },
+                    "500": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
                     }
                 }
             },
             "delete": {
-                "summary": "Delete user",
-                "description": "Delete user by user ID.",
-                "operationId": "ca3bfc7e1af7dd133610cb2c3f25b73e",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Excluir um usuário",
+                "description": "Excluir um usuário pelo UserId.",
+                "operationId": "009f43dc3a1f342dbb9fbd4417abab0d",
                 "parameters": [
                     {
                         "name": "id",
@@ -218,11 +256,21 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "User deleted successfully"
+                    "200": {
+                        "description": "Usuário excluído com sucesso"
                     },
                     "404": {
-                        "description": "User not found"
+                        "description": "Usuário não encontrado"
+                    },
+                    "500": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -230,14 +278,14 @@
     },
     "components": {
         "schemas": {
-            "User": {
-                "title": "User",
-                "description": "User model",
+            "UserRequestsDto": {
+                "required": [
+                    "name",
+                    "email",
+                    "password",
+                    "remember_token"
+                ],
                 "properties": {
-                    "id": {
-                        "description": "User ID",
-                        "type": "integer"
-                    },
                     "name": {
                         "description": "User name",
                         "type": "string"
@@ -253,16 +301,19 @@
                     "remember_token": {
                         "description": "User remember token",
                         "type": "string"
-                    },
-                    "created_at": {
-                        "description": "User creation date and time",
+                    }
+                },
+                "type": "object"
+            },
+            "Error": {
+                "properties": {
+                    "message": {
                         "type": "string",
-                        "format": "date-time"
+                        "example": "Error message."
                     },
-                    "updated_at": {
-                        "description": "User update date and time",
-                        "type": "string",
-                        "format": "date-time"
+                    "status": {
+                        "type": "boolean",
+                        "example": false
                     }
                 },
                 "type": "object"
